# shortner

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml  release.yml
ansible/: deploy.yml  inventory  site.yml
ansible/roles/shortner/tasks/: deploy.yml  main.yml  provision.yml
ansible/roles/shortner/templates/: .env.j2  docker-compose.yml.j2
shortner/: __main__.py  app.py  middlewares.py
src/shortner/: __main__.py  app.py
src/shortner/handlers/: meta.py
src/shortner/management/: server.py
tests/: conftest.py  test_config.py
