[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "shortner"
version = "0.1.3"
description = ""
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
packages = [
    { include = "shortner", from = "src" },
]

[tool.poetry.dependencies]
aiodns = "==2.0.0"
aiohttp = "==3.6.0"
aiohttp-metrics = {git = "https://github.com/clayman74/aiohttp-metrics.git", rev = "v0.1.2"}
attrs = "==19.1.0"
cchardet = "==2.1.4"
click = "==7.0"
config = {git = "https://github.com/clayman74/config.git", rev = "v0.1.1"}
python = "^3.7"
sentry-sdk = "==0.12.2"
ujson = "==1.35"
uvloop = "==0.13.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
mypy = "*"
pytest = "*"
pytest-aiohttp = "*"
pytest-postgres = "*"
rope = "*"
