[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "shortner"
version = "0.1.3"
description = ""
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
packages = [
    { include = "shortner", from = "src" },
]

[tool.poetry.dependencies]
aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.2.8"}
aiohttp-metrics = {git = "https://github.com/clayman083/aiohttp-metrics.git", rev = "v0.1.3"}
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
mypy = "*"
pytest = "*"
pytest-aiohttp = "*"
rope = "*"
