[bumpversion]
current_version = 0.1.3
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)

[metadata]
name = shortner
author = Kirill Sumorokov
author-email = sumorokov.k@gmail.com
summary = URL shortner service
license = MIT

[options]
packages = find:

[pbr]
skip_changelog = yes
skip_authors = yes

